--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 /*****************************
 Sommaire
@@ -24,76 +25,94 @@ Sommaire
 
 body{
     min-height: 100vh;
+    font-family: 'Roboto', sans-serif;
 }
 
 /*** Main ***/
 
-#main{
-    min-height: 100vh;
-    background: url(./images/island.jpg);
-}
-
-.island h1{
-    text-transform: uppercase;
-    font-family: 'Finger Paint', cursive;
-    font-weight: lighter;
-    text-align: center;
-    padding-top: 1.5rem;
-    letter-spacing: 5px;
-    color: white;
-    font-size: 3.5rem;
-    animation: fade 10s;
-}
-
-@keyframes fade {
-
-    0%{
-        opacity: 0;
-    }
-
-    100%{
-        opacity: 1;
-    }
-    
-}
-
-.dot{
-    min-height: 50vh;
+.containerindex{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.dot div{
-    display: flex;
-    flex-direction: column;
-}
-
-.dot span{
-    width: 20px;
-    height: 20px;
-    background-color: white;
-    border-radius: 50%;
-    margin: 3rem;
-    margin-top: 8rem;
-    cursor: pointer;
-}
-
-span{
-    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+    margin-top: 0.rem;
 }
 
-span a{
-    text-decoration: none;
-    color: white;
+.button2 {
+    position: absolute;
+    width: 700px;
+    left:0;
+    top: 230px;
     text-align: center;
-}
+    opacity: 0;
+    transition: opacity .35s ease;
+  }
+  
+  .button2 a {
+    width: 200px;
+    padding: 12px 48px;
+    text-align: center;
+    color: white;
+    border: solid 2px white;
+    z-index: 1;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+  
+  .container2:hover .button2 {
+    opacity: 1;
+  }
 
-.dot span:hover{
-    transition: 750ms;
-   transform: scale(1.5);
-}
+  .container2 {
+    position: relative;
+    width: 700px;
+    height: 400px;
+    margin: 1rem;
+  }
+  
+  .overlay2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0);
+    transition: background 0.5s ease;
+    box-shadow: 0px 4px 9px 0px #00000059;
+    border-radius: 5px;
+  }
+  
+  .container2:hover .overlay2 {
+    display: block;
+    background: rgba(0, 0, 0, .3);
+  }
+  
+  .container2 img {
+    position: absolute;
+    width: 700px;
+    height: 400px;
+    left: 0;
+  }
+  
+  .title2 {
+    position: absolute;
+    letter-spacing: 5px;
+    width: 700px;
+    left: 0;
+    top: 120px;
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    z-index: 1;
+    transition: top .5s ease;
+    text-shadow: 5px 5px 20px rgb(144, 144, 144);
+  }
+  
+  .container2:hover .title {
+    top: 90px;
+  }
 
 /*** Section Baleines ***/
 
@@ -109,11 +128,102 @@ span a{
 
 /*** Section Paysages ***/
 
-#landscape-section{
-    min-height: 100vh;
-    background: url(./images/landscape.jpg);
-    display: none;
+
+
+.return{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: black;
+    padding-block: 2rem;
+    box-shadow: 0px 5px 20px rgb(144, 144, 144);
 }
+
+.return a{
+    text-decoration: none;
+    font-size: 2em;
+    color: black;
+    margin-left: 9rem;
+}
+
+.return h1{
+    margin-right: 7rem;
+    letter-spacing: 0.3rem;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: lighter;
+    text-transform: uppercase;
+}
+
+b{
+    color: rgb(233, 162, 81);
+}
+
+.home{
+    width: 30px;
+}
+
+.containerall{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2rem;
+    
+}
+
+.container {
+    position: relative;
+    width: 500px;
+    height: 300px;
+    margin: 2rem;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0);
+    transition: background 0.5s ease;
+    box-shadow: 0px 4px 9px 0px #00000059;
+    border-radius: 5px;
+  }
+  
+  .container:hover .overlay {
+    display: block;
+    background: rgba(0, 0, 0, .3);
+  }
+  
+  .container img {
+    position: absolute;
+    width: 500px;
+    height: 300px;
+    left: 0;
+  }
+  
+  .title {
+    position: absolute;
+    letter-spacing: 5px;
+    width: 500px;
+    left: 0;
+    top: 120px;
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    z-index: 1;
+    transition: top .5s ease;
+    text-shadow: 5px 5px 20px rgb(144, 144, 144);
+  }
+  
+  .container:hover .title {
+    top: 90px;
+  }
+  
+  .container:hover .button {
+    opacity: 1;
+  }
 
 /*** Section océan ***/
 
@@ -125,21 +235,37 @@ span a{
     display: none;
 }
 
-/*** Section oiseaux ***/
+/*** Section animaux ***/
 
-#birds-section{
-    display: none;
-    min-height: 100vh;
-    background: url(./images/bird.jpg);
-    background-size: cover;
+.container3 {
+    position: relative;
+    width: 500px;
+    height: 300px;
+  }
 
-}
+  .container3:hover .title {
+    top: 90px;
+  }
+  
+  .container3:hover .button {
+    opacity: 1;
+  }
+
+  .container3:hover .overlay {
+    display: block;
+    background: rgba(0, 0, 0, .3);
+  }
+  
+  .container3 img {
+    position: absolute;
+    width: 500px;
+    height: 300px;
+    left: 0;
+  }
 
 /*** Section nourriture ***/
 
-#food-section{
-    display: none;
-}
+
 
 /*** Section cultures ***/
 
